check errors on each method